@@ -13956,6 +13956,7 @@ ix86_expand_unop_builtin (enum insn_code icode, tree arglist,
 
   if (! target
       || GET_MODE (target) != tmode
+      || (do_load && GET_CODE (target) == MEM)
       || ! (*insn_data[icode].operand[0].predicate) (target, tmode))
     target = gen_reg_rtx (tmode);
   if (do_load)
