@@ -1,3 +1,8 @@
+2005-08-03  Richard Sandiford  <richard@codesourcery.com>
+
+	PR target/18582
+	* testsuite/gcc.dg/torture/pr18582-1.c: New test.
+
 2005-08-02  Ian Lance Taylor  <ian@airs.com>
 
 	PR pch/14400
